--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-3">
             <div class="sidebar-nav-fixed affix" id="feeds-index-container">
-            <h4 style="color:#EBEBEB" class="index-title"> My Feeds </h4>
+            <h4 style="color:#EBEBEB;border-bottom:2px solid" class="index-title"> My Feeds </h4>
                 <div class="well pre-scrollable" style="background-color:black">
                     <ul class="nav" id="feeds-index">
              
@@ -24,9 +24,10 @@
           </div> 
         </div>
         <!--/span-->
-        <div class="col-md-3" id="entries-index-container">
-            <div class="sidebar-nav-fixed pull-right affix">
-                <div class="well">
+        <div class="col-md-3" >
+            <div class="sidebar-nav-fixed pull-right affix" id="entries-index-container">
+            <h4 class="index-title" style="padding-top:15px"> Latest Entries </h4>
+                <div class="well pre-scrollable" style="background-color:#A11111">
                     <ul class="nav" id="entries-index">
          
                     </ul>
