--- a/app/assets/templates/entries/entries_index.jst.ejs
+++ b/app/assets/templates/entries/entries_index.jst.ejs
@@ -1,5 +1,5 @@
-<ul class="entries-list">
+<ul class="entries-list nav">
   <% entries && entries.forEach(function(entry, idx){ %>
-    <li data-idx="<%= idx %>" class="entry-list-item"><%= entry.title %></li>
+    <li><a href="#" data-idx="<%= idx %>" class="entry-list-item"><%= entry.title %></a></li>
   <% }); %>
 </ul>
