--- a/app/assets/templates/entries/entries_index.jst.ejs
+++ b/app/assets/templates/entries/entries_index.jst.ejs
@@ -1,5 +1,8 @@
 <ul class="entries-list nav">
   <% entries && entries.forEach(function(entry, idx){ %>
-    <li><a href="#" data-idx="<%= idx %>" class="entry-list-item"><%= entry.title %></a></li>
+    <li>
+      <a href="#" data-idx="<%= idx %>" class="entry-list-item <%= idx === activeIdx ? "active-entry" : "" %>">
+      <%= entry.title %></a>
+    </li>
   <% }); %>
 </ul>
