--- a/app/assets/templates/feeds/feed_show.jst.ejs
+++ b/app/assets/templates/feeds/feed_show.jst.ejs
@@ -1,10 +1,11 @@
-  <a href="<%= feed.get('url') %>" class="feed-title"><%= feed.get('title') %></a>
-  
-    <% if (feed.get('subscribed') === "subscribed") { %>
-      <button class="toggle-subscribe-btn red btn">Unsubscribe</button>
-    <% } else { %>
-      <button class="toggle-subscribe-btn green btn">Subscribe</button>
-    <% } %>
+  <a href="<%= feed.get('url') %>" class="feed-title"><%= feed.get('title') %></a>  
+  <div class="feed-header">
+      <% if (feed.get('subscribed') === "subscribed") { %>
+        <button class="toggle-subscribe-btn red btn">Unsubscribe</button>
+      <% } else { %>
+        <button class="toggle-subscribe-btn green btn">Subscribe</button>
+      <% } %>
+  </div>
   <% if (feed.entries && feed.entries.length > 0) { %>
       <% var activeEntry = feed.entries[feed.get('selectedEntryIdx')]; %>
         <a class="entry-title" href="<%= activeEntry['url'] %>">
@@ -23,3 +24,6 @@
   <% if (Breedly.CURRENT_USER_ID == 2 || Breedly.CURRENT_USER_ID === feed.get('user_id')) { %>
     <button class="attempt-destroy-btn btn red">Delete this feed.</button>
 <% } %>
+<script>
+  $(function() { $('#main-content a').attr("target","_blank") });
+</script
