--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -1,41 +1,24 @@
 <div id="navbar"></div>
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-3">
-            <div class="sidebar-nav-fixed affix" id="feeds-index-container">
-            <h4 style="color:#EBEBEB;border-bottom:2px solid" class="index-title"> My Feeds </h4>
-                <div class="well pre-scrollable" style="background-color:black">
-                    <ul class="nav" id="feeds-index">
-             
-                    </ul>
-                </div>
-                <!--/.well -->
-            </div>
-            <!--/sidebar-nav-fixed -->
-        </div>
-        <!--/span-->
-        <div class="col-md-6">
-          <div id="main-container">
-            <div id="errors-main"></div>
-            <div id="success-main"></div>
-            <div class="whirly"></div>
-            <div id="main-content"></div>
-          </div> 
-        </div>
-        <!--/span-->
-        <div class="col-md-3" >
-            <div class="sidebar-nav-fixed pull-right affix" id="entries-index-container">
-            <h4 class="index-title" style="padding-top:15px"> Latest Entries </h4>
-                <div class="well pre-scrollable" style="background-color:#A11111">
-                    <ul class="nav" id="entries-index">
-         
-                    </ul>
-                </div>
-                <!--/.well -->
-            </div>
-            <!--/sidebar-nav-fixed -->
-        </div>
-        <!--/span-->
+  <div class="sidebar-nav-fixed affix" id="feeds-index-container">
+    <h4 style="color:#EBEBEB" class="index-title"> My Feeds </h4>
+      <div class="well pre-scrollable" style="background-color:black">
+          <ul class="nav" id="feeds-index"></ul>
+      </div>
+  </div>
+ 
+  <div id="main-container">
+    <div id="errors-main"></div>
+    <div id="success-main"></div>
+    <div class="whirly"></div>
+    <div id="main-content"></div>
+  </div> 
+
+  <div class="sidebar-nav-fixed pull-right affix" id="entries-index-container">
+  <h4 class="index-title" style="color:black;padding-top:15px"> Latest Entries </h4>
+    <div class="well pre-scrollable" style="background-color:#A11111">
+        <ul class="nav" id="entries-index"></ul>
     </div>
+  </div>
 </div>
