--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="sidebar-nav-fixed affix" id="feeds-index-container">
-    <h4 style="color:#EBEBEB" class="index-title"> My Feeds </h4>
+    <h4 style="color:#337AB7" class="index-title"> My Feeds </h4>
       <div class="well pre-scrollable" style="background-color:black">
           <ul class="nav" id="feeds-index"></ul>
       </div>
@@ -12,11 +12,11 @@
     <div id="errors-main"></div>
     <div id="success-main"></div>
     <div class="whirly"></div>
-    <div id="main-content"></div>
+    <div id="main-content" class="clearfix"></div>
   </div> 
 
   <div class="sidebar-nav-fixed pull-right affix" id="entries-index-container">
-  <h4 class="index-title" style="color:black;padding-top:15px"> Latest Entries </h4>
+  <h4 class="index-title" style="color:black"> Latest Entries </h4>
     <div class="well pre-scrollable" style="background-color:#A11111">
         <ul class="nav" id="entries-index"></ul>
     </div>
