--- a/app/assets/templates/navbar.jst.ejs.erb
+++ b/app/assets/templates/navbar.jst.ejs.erb
@@ -39,9 +39,9 @@
       </ul>
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="feed title">
+          <input type="text" class="form-control" id="feed-title" placeholder="feed title">
         </div>
-        <button type="submit" class="btn btn-default">Search</button>
+        <button type="submit" class="btn btn-default" id="nav-feed-search">Search</button>
       </form>
     </div>
   </div>
