--- a/app/assets/templates/navbar.jst.ejs.erb
+++ b/app/assets/templates/navbar.jst.ejs.erb
@@ -12,7 +12,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img class="navbar-brand" src="<%= image_path('logo_full.png') %>">
+      <img class="navbar-brand" src="<%= image_path('logo_small.png') %>">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -39,7 +39,7 @@
       </ul>
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" id="feed-title" placeholder="feed title">
+          <input type="text" style="border: thin solid #337AB7" class="form-control" id="feed-title" placeholder="feed title">
         </div>
         <button type="submit" class="btn btn-default" id="nav-feed-search">Search</button>
       </form>
