--- a/app/assets/templates/navbar.jst.ejs.erb
+++ b/app/assets/templates/navbar.jst.ejs.erb
@@ -2,7 +2,7 @@
 
 <button id="user-topic-btn" class="btn nav-btn">Add an Interest</button>
 
-<button id="update-user-btn" class="btn nav-btn">Update my Profile</button> -->
+<button id="update-user-btn" class="btn nav-btn"></button> -->
 
   <div class="container-fluid">
     <div class="navbar-header">
@@ -15,21 +15,16 @@
       <img class="navbar-brand" src="<%= image_path('logo_small.png') %>">
     </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="collapsable">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#" id="update-user-btn">Update my Info</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#" id="user-topic-btn">Add an Interest</a></li>
             <li role="separator" class="divider"></li>
-            <li><a id="logout-btn" href="#">Log Out</a></li>
+            <li><a href="#" id="logout-btn">Log Out</a></li>
           </ul>
         </li>
       </ul>
@@ -39,7 +34,7 @@
       </ul>
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
-          <input type="text" style="border: thin solid #337AB7" class="form-control" id="feed-title" placeholder="feed title">
+          <input type="text" class="form-control" id="feed-title" placeholder="feed title">
         </div>
         <button type="submit" class="btn btn-default" id="nav-feed-search">Search</button>
       </form>
