--- a/app/views/shared/_guest_login.html.erb
+++ b/app/views/shared/_guest_login.html.erb
@@ -4,6 +4,6 @@
   <p>Just wanna look around?</p>
   <input type="hidden" name="user[username]" value="Guest">
   <input type="hidden" name="user[password]" value="guest_login">
-  <input class="btn guest-btn" type="submit" value="Be my guest.">
+  <input class="btn guest-btn submit" type="submit" value="Be my guest.">
 </form>
 </div>
