--- a/app/assets/templates/entries/entries_index.jst.ejs
+++ b/app/assets/templates/entries/entries_index.jst.ejs
@@ -1,7 +1,7 @@
 <ul class="entries-list nav">
   <% entries && entries.forEach(function(entry, idx){ %>
-    <li>
-      <a href="#" data-idx="<%= idx %>" class="entry-list-item <%= idx === activeIdx ? "active-entry" : "" %>">
+    <li class="<%= idx === activeIdx ? "active-entry" : "" %>">
+      <a href="#" data-idx="<%= idx %>" class="entry-list-item">
       <%= entry.title %></a>
     </li>
   <% }); %>
