--- a/app/assets/templates/feeds/feed_search.jst.ejs
+++ b/app/assets/templates/feeds/feed_search.jst.ejs
@@ -1,21 +1,21 @@
 <h3>Find Your Next Feed</h3>
 <br>
-<div class="ui-widget">
-  <form id="feed-search-form">
-    <label for="feed-title">Search by title:</label>
-    <input id="feed-title" type="text" name="feed[title]">
-    <button class="btn find-titled-feed green" data-scope="title">Show me this feed.</button>
-    <br><br>
-    <label for="feed-topic">Search by Topic:</label>
-    <input id="feed-topic" type="text" name="feed[topic]">
-    <button class="btn find-topic-feeds green" data-scope="topic">Find me these feeds.</button>
-    <br><br>
-    <h4>Include:</h4>
-    <br>
-    <label for="public-feeds">public feeds:</label>
-    <input type="checkbox" name="feed[public]" value="1">
-    <label for="personal-feeds">personal feeds:</label>
-    <input type="checkbox" name="feed[personal]" value="1">
-  </form>
+<form id="feed-search-form" class="form-group">
+  <label for="feed-topic">Search by Topic:</label>
+  <input id="feed-topic" type="text" name="feed[topic]" class="form-control">
+  <br>
+  <button class="btn find-topic-feeds plain centered" data-scope="topic">Find me these feeds.</button>
+  <br>
+  <h4>Include:</h4>
+  <label for="public-feeds">public feeds:</label>
+  <input type="checkbox" name="feed[public]" value="1">
+  <label for="personal-feeds">personal feeds:</label>
+  <input type="checkbox" name="feed[personal]" value="1">
+</form>
   <div class="search-result-content"></div>
-</div>
+
+<script>
+$(function() {
+  $('#feed-topic').focus();
+});
+</script>
