--- a/app/assets/templates/feeds/search_result.jst.ejs
+++ b/app/assets/templates/feeds/search_result.jst.ejs
@@ -1,1 +1,7 @@
 <a href="#feeds/<%= feed.id %>" class="search-result-link"><%= feed.get('title') %></a>
+  <% debugger; %>
+  <% if (feed.get('subscribed') === "subscribed") { %>
+    <button class="toggle-subscribe-btn red btn">Unsubscribe</button>
+  <% } else { %>
+    <button class="toggle-subscribe-btn green btn">Subscribe</button>
+  <% } %>
