--- a/app/assets/templates/navbar.jst.ejs.erb
+++ b/app/assets/templates/navbar.jst.ejs.erb
@@ -1,42 +1,36 @@
-<!-- <button id="logout-btn" class="btn nav-btn">Log Out</button>
-
-<button id="user-topic-btn" class="btn nav-btn">Add an Interest</button>
-
-<button id="update-user-btn" class="btn nav-btn"></button> -->
-
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <img class="navbar-brand" src="<%= image_path('logo_small.png') %>">
-    </div>
-
-    <div class="collapse navbar-collapse" id="collapsable">
-      <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#" id="update-user-btn">Update my Info</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#" id="user-topic-btn">Add an Interest</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#" id="logout-btn">Log Out</a></li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" id="feed-search-btn">Custom Search</a></li>
-        <li><a href="#" id="add-feed-btn">Add a Public Feed</a></li>
-      </ul>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" id="feed-title" placeholder="feed title">
-        </div>
-        <button type="submit" class="btn btn-default" id="nav-feed-search">Search</button>
-      </form>
-    </div>
+<div class="container-fluid">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable" aria-expanded="false">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <img class="navbar-brand" src="<%= image_path('logo_small.png') %>">
   </div>
+
+  <div class="collapse navbar-collapse" id="collapsable">
+    <ul class="nav navbar-nav">
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile<span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#" id="update-user-btn">Update my Info</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#" id="user-topic-btn">Add an Interest</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#" id="logout-btn">Log Out</a></li>
+        </ul>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#" id="feed-search-btn">Custom Search</a></li>
+      <li><a href="#" id="add-feed-btn">Add a Public Feed</a></li>
+    </ul>
+    <form class="navbar-form navbar-right" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" id="feed-title" placeholder="feed title">
+      </div>
+      <button type="submit" class="btn btn-default plain" id="nav-feed-search">Search</button>
+    </form>
+  </div>
+</div>
