--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -400,3 +400,10 @@ ul.dropdown-menu {
   text-align: left;
 }
 
+td {
+  padding: 5px 20px 5px 20px;
+  text-align: left;
+}
+
+.errors { color: #AA1111; }
+
