--- a/app/assets/templates/feeds/feed_search.jst.ejs
+++ b/app/assets/templates/feeds/feed_search.jst.ejs
@@ -4,13 +4,14 @@
   <label for="feed-topic">Search by Topic:</label>
   <input id="feed-topic" type="text" name="feed[topic]" class="form-control">
   <br>
-  <button class="btn find-topic-feeds plain centered" data-scope="topic">Find me these feeds.</button>
+  <button class="btn find-topic-feeds plain centered">Find me these feeds.</button>
+  <button class="clear-selected-topics">clear these topics</button>
   <br>
-  <h4>Include:</h4>
+<!--   <h4>Include:</h4>
   <label for="public-feeds">public feeds:</label>
   <input type="checkbox" name="feed[public]" value="1">
   <label for="personal-feeds">personal feeds:</label>
-  <input type="checkbox" name="feed[personal]" value="1">
+  <input type="checkbox" name="feed[personal]" value="1"> -->
 </form>
   <div class="search-result-content"></div>
 
