bring feed descriptions back in

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,9 +25,6 @@ ul { list-style-type: none; }
   position: absolute;
   left: 50%;
   top: 30%;
-/*  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);*/
   z-index: 10;
 }
 
@@ -142,6 +139,13 @@ li.active-feed > a {
   border: thin solid #D86F6F;
 }
 
+.btn.red:hover, .btn.red:focus {
+  background-color: rgba(161, 17, 17, 0.5);
+}
+
+.btn.green:hover, .btn.green:focus {
+  background-color: rgba(60, 230, 20, 0.5);
+}
 
 
 .ui-autocomplete.ui-widget-content {
@@ -293,10 +297,14 @@ ul.dropdown-menu {
   text-align: center;
 }
 
-.feed-desc {
+.teaser-content {
   padding: 50px;
-  z-index: 3;
-  text-align: center;
+  z-index: 5;
+  position: fixed;
+  top: 50px;
+  left: 20%;
+  height: calc(100% - 50px);
+  width: 60%;
 }
 
 
@@ -347,7 +355,7 @@ ul.dropdown-menu {
   bottom:0;
   left:0;
   right:0;
-  z-index: 2;
+  z-index: 4;
 }
 
 /* logo */
