refresh subs on any feed model subscription change

--- a/app/assets/templates/feeds/feed_search.jst.ejs
+++ b/app/assets/templates/feeds/feed_search.jst.ejs
@@ -5,7 +5,7 @@
   <input id="feed-topic" type="text" name="feed[topic]" class="form-control" autofocus>
   <br>
   <button class="btn find-topic-feeds plain centered">Find me these feeds.</button>
-  <button class="clear-selected-topics">clear these topics</button>
+  <button class="clear-selected-topics red">clear these topics</button>
   <br>
 <!--   <h4>Include:</h4>
   <label for="public-feeds">public feeds:</label>
