clean up seeds, attempt to fix heroku db

--- a/app/assets/templates/feeds/feed_search.jst.ejs
+++ b/app/assets/templates/feeds/feed_search.jst.ejs
@@ -4,8 +4,8 @@
   <label for="feed-topic">Search by Topic:</label>
   <input id="feed-topic" type="text" name="feed[topic]" class="form-control" autofocus>
   <br>
-  <button class="btn find-topic-feeds plain centered">Find me these feeds.</button>
-  <button class="clear-selected-topics red">clear these topics</button>
+  <button class="btn find-topic-feeds green">Find me these feeds.</button>
+  <button class="clear-selected-topics red btn">clear these topics.</button>
   <br>
 <!--   <h4>Include:</h4>
   <label for="public-feeds">public feeds:</label>
