--- a/app/assets/templates/feeds/feed_desc.jst.ejs
+++ b/app/assets/templates/feeds/feed_desc.jst.ejs
@@ -1,4 +1,4 @@
-<div class="desc-layer-bg"></div>
+<div class="teaser-bg"></div>
 <div class="teaser-content">
   <h2 class="feed-title"><%= feed.get('title') %></h2>
   <h3 style="color:#A11111"><%= feed.get('description') %></h3>
