add new sanitize gem and start logic for videos

--- a/app/assets/templates/feeds/feed_show.jst.ejs
+++ b/app/assets/templates/feeds/feed_show.jst.ejs
@@ -28,5 +28,8 @@
   <% } %>
 </div>
 <script>
-  $(function() { $('#main-content a').attr("target","_blank") });
+  $(function() { 
+    $('#main-content a').attr("target","_blank") 
+    $('video').attr('controls', 'true');
+  });
 </script
